// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stats should render the stats component with a blank description 1`] = `
<div
  className="stats"
>
  <Markdown
    text="Hello, world."
  />
  <div
    className="stats__footer"
  >
    <div
      className="stats__info"
    >
      <span />
      <br />
      <span />
      <br />
      <span />
      <br />
      <span />
      <br />
    </div>
    <div
      className="stats__info"
    >
      <span />
      <br />
      <span>
         
        /
      </span>
      <br />
      <span>
         
      </span>
      <br />
      <span>
         
      </span>
    </div>
  </div>
</div>
`;

exports[`Stats should render the stats component with the given description 1`] = `
<div
  className="stats"
>
  <Markdown
    text=""
  />
  <div
    className="stats__footer"
  >
    <div
      className="stats__info"
    >
      <span />
      <br />
      <span />
      <br />
      <span />
      <br />
      <span />
      <br />
    </div>
    <div
      className="stats__info"
    >
      <span />
      <br />
      <span>
         
        /
      </span>
      <br />
      <span>
         
      </span>
      <br />
      <span>
         
      </span>
    </div>
  </div>
</div>
`;
